src/objects/PricingMicroServiceCallOut__mdt.object
<CustomObject>
    <fields>
        <fullName>Client_ID__c</fullName>
        <label>Client ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GetOrderDetailsLogicAppsURL__c</fullName>
        <label>Get Order Details Logic Apps URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logic_Apps_URL__c</fullName>
        <label>Pricing Logic Apps URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scope__c</fullName>
        <label>Scope</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secret_Id__c</fullName>
        <label>Secret Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TokenURL__c</fullName>
        <label>Token URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Logic Apps Call Out</label>
    <pluralLabel>Logic Apps Call Outs</pluralLabel>
</CustomObject>